[build-system]
requires = ["setuptools>=61.0", "wheel", "cffi>=1.15.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc-falcon"
version = "0.1.0"
description = "A Python wrapper for PQClean Falcon using CFFI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Albert Nieto", email = "nietom.albert@gmail.com" }
]
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "cffi>=1.15.0"
]
[project.urls]
Homepage = "https://github.com/albertnieto/"